main page text adjust

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,23 @@
   <body>
   <p>
   This website is my set of PoA Network DApps, I will extend this list from time to time, so watch carefully.
-  
+  <br/>UI is available at:
+  <br/><a href="https://github.com/adamskrodzki/PoADapps">Github</a>
+  <br/>Contracts are:
+  <ol>
+	<li>POA King
+		<ol>
+		<li>Sokol -  <a href="https://sokol-explorer.poa.network/address/0x999a11a8c4d4950896d370badacfbc8ceaf7216a">0x999a11a8c4d4950896d370badacfbc8ceaf7216a</a></li></li>
+		<li>Core - <a href="https://poaexplorer.com/address/0xec78bde2db6da335e04cfa7ed80373dbfb0cd502">0xec78bde2db6da335e04cfa7ed80373dbfb0cd502</a></li>
+		</ol>
+	</li>
+	<li>Proof of Existence
+		<ol>
+		<li>Sokol -  <a href="https://sokol-explorer.poa.network/address/0x4061648c3c2dbb0c4bb35a3775781af08604787f">0x4061648c3c2dbb0c4bb35a3775781af08604787f</a></li></li>
+		<li>Core - <a href="https://poaexplorer.com/address/0xb2c8f7a2806352ff43671e5fc956c3d25d0477ec">0xb2c8f7a2806352ff43671e5fc956c3d25d0477ec</a></li>
+		</ol>
+	</li>
+  </ol>
   If You like what I'm doing. 
   </p>
 	<a class="btn" id="runKing" href="javascript:PoaDApp.openApp('kingApp');">POA King</a>
