main page text adjust

--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,18 @@
   <ol>
 	<li>POA King
 		<ol>
-		<li>Sokol -  <a href="https://sokol-explorer.poa.network/address/0x999a11a8c4d4950896d370badacfbc8ceaf7216a">0x999a11a8c4d4950896d370badacfbc8ceaf7216a</a></li></li>
+		<li>Sokol -  <a href="https://sokol-explorer.poa.network/account/0x999a11a8c4d4950896d370badacfbc8ceaf7216a">0x999a11a8c4d4950896d370badacfbc8ceaf7216a</a></li></li>
 		<li>Core - <a href="https://poaexplorer.com/address/0xec78bde2db6da335e04cfa7ed80373dbfb0cd502">0xec78bde2db6da335e04cfa7ed80373dbfb0cd502</a></li>
 		</ol>
 	</li>
 	<li>Proof of Existence
 		<ol>
-		<li>Sokol -  <a href="https://sokol-explorer.poa.network/address/0x4061648c3c2dbb0c4bb35a3775781af08604787f">0x4061648c3c2dbb0c4bb35a3775781af08604787f</a></li></li>
+		<li>Sokol -  <a href="https://sokol-explorer.poa.network/account/0x4061648c3c2dbb0c4bb35a3775781af08604787f">0x4061648c3c2dbb0c4bb35a3775781af08604787f</a></li></li>
 		<li>Core - <a href="https://poaexplorer.com/address/0xb2c8f7a2806352ff43671e5fc956c3d25d0477ec">0xb2c8f7a2806352ff43671e5fc956c3d25d0477ec</a></li>
 		</ol>
 	</li>
   </ol>
-  If You like what I'm doing. 
+  If You like what I'm doing. <b>donate to : 0x94DA43C587c515AD30eA86a208603a7586D2C25F</b> Or bid in POA King game.
   </p>
 	<a class="btn" id="runKing" href="javascript:PoaDApp.openApp('kingApp');">POA King</a>
 	<a class="btn" id="runPoE" href="javascript:PoaDApp.openApp('proofOfExistence');">Proof Of Existence</a>
