main page text adjust

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   This website is my set of PoA Network DApps, I will extend this list from time to time, so watch carefully.
   <br/>UI is available at:
   <br/><a href="https://github.com/adamskrodzki/PoADapps">Github</a>
+  <br/>I'm backend developer not UI designer, so You are more than welcome to fork It and change to some nicer look
   <br/>Contracts are:
   <ol>
 	<li>POA King
@@ -26,7 +27,7 @@
 		</ol>
 	</li>
   </ol>
-  If You like what I'm doing. <b>donate to : 0x94DA43C587c515AD30eA86a208603a7586D2C25F</b> Or bid in POA King game.
+  If You like what I'm doing. donate to :<b>0x94DA43C587c515AD30eA86a208603a7586D2C25F</b> Or bid in POA King game.
   </p>
 	<a class="btn" id="runKing" href="javascript:PoaDApp.openApp('kingApp');">POA King</a>
 	<a class="btn" id="runPoE" href="javascript:PoaDApp.openApp('proofOfExistence');">Proof Of Existence</a>
