main page text adjust

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <p>
-  This website is my set of PoA Network DApps, I will extend this list from time to time, so watch carefully.
+  This website is my set of PoA Network DApps (Metamask required), I will extend this list from time to time, so watch carefully.
   <br/>UI is available at:
   <br/><a href="https://github.com/adamskrodzki/PoADapps">Github</a>
   <br/>I'm backend developer not UI designer, so You are more than welcome to fork It and change to some nicer look
